--- a/DoctorWebASP/Views/Account/Login.cshtml
+++ b/DoctorWebASP/Views/Account/Login.cshtml
@@ -1,13 +1,17 @@
 ﻿@using DoctorWebASP.Models
 @model LoginViewModel
-@{
+@*{
     ViewBag.Title = "Ingreso a DoctorWeb";
-}
+}*@
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-10">
-        <section id="loginForm">
+@*<h2>@ViewBag.Title.</h2>*@
+ <div class="login-logo">
+    <a href="#"><b>Doctor</b>WEB</a>
+  </div>
+  <!-- /.login-logo -->
+<div class="col-md-5" style="margin-left:30%">
+    <div class="login-box-body">
+        <section id="login-box-body">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
@@ -16,47 +20,50 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    <div class="col-md-8">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    <div class="col-md-8">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     @*<div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>*@
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
+                            </div>
+                        </div>*@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Ingresar" class="btn btn-default" />
+                        <input type="submit" value="Ingresar    " class="btn btn-default" />
                     </div>
                 </div>
-               // <p>
-                 //   @Html.ActionLink("Register as a new user", "Register")
-               // </p>
-                
-                    <p>
-                        @Html.ActionLink("Olvidaste tu contraseña?", "ForgotPassword")
-                    </p>
+                // <p>
+                //   @Html.ActionLink("Register as a new user", "Register")
+                // </p>
+
+                <p>
+                    @Html.ActionLink("Olvidaste tu contraseña?", "ForgotPassword")
+                </p>
             }
         </section>
     </div>
-  @*  <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>*@
+    </div>
+    @*  <div class="col-md-4">
+            <section id="socialLoginForm">
+                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            </section>
+        </div>*@
 </div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
